UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_VIR_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VIR Histories</relationshipLabel>
        <relationshipName>VIR_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GR_TrackingTier__c</fullName>
        <label>GR% (TrackingTier)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>VIR History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contracts__c</columns>
        <columns>GR_TrackingTier__c</columns>
        <columns>Remarks__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIR History-{0000000}</displayFormat>
        <label>VIR History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIR Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>